test/positive/feature_char.java

public class feature_char {
  public feature_char() {}
  protected char x;
}

