test/negative/ClassInheritIdenticalSignaturesCanonical/A.java
import B.B;
import C.C;
public class A {
    public A() {}
}
